<resources>
    <string name="app_name">Animals Alarm Clock</string>
    <string name="time_am">AM</string>
    <string name="time_pm">PM</string>
    <string name="add_alarm">Add alarm</string>
    <string name="am_pm">AM/PM</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="arrow">Arrow</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_all">Cancel all</string>
    <string name="about">About</string>
    <string name="text_about_fragment">Cartoon vector created by freepik - www.freepik.com
    Photo by eberhard grossgasteiger on Unsplash</string>
    <string name="default_time">00:00</string>
</resources>
